[package]
name = "reqwest-auth"
version = "1.0.0"
authors = ["nvivot <vivot.nicolas@gmail.com>"]
edition = "2021"
repository = "https://github.com/nicolas-vivot/reqwest-auth/tree/main"
keywords = ["reqwest", "middleware", "authentication", "token", "token-source"]
license = "MIT"
readme = "README.md"
description = "Authorization middleware for reqwest."
exclude = [".githooks", ".github", "Makefile"]

[lib]
doctest = true

[features]

[dependencies]
reqwest-middleware = { version = "0.4.0", default-features = false }
async-trait = "0.1"
http = "1.3"
anyhow = "1.0"
token-source = "1.0.0"

[dev-dependencies]
reqwest = { version = "0.12.15", default-features = false }
async-std = { version = "1.13", features = ["attributes", "tokio1"] }
url = "2.5.4"
